# OpenCLLitmus_v_2

./: CMakeLists.txt  FindOpenCL.cmake  README.md  cl_execution.h  functiondefs.h  fuzz.py  het_targ.py  hetereosked.py  litmus_driver.cpp
